--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 .input-form {
     margin-top: 10px;
-    background-color: #eee;
+    background-color: #B9FFF8;
     width: 80vw;
     height: 7vh;
     display: flex;
@@ -18,13 +18,17 @@ body {
     padding: 10px;
 }
 .input-form .input-submit {
-    background-color: lightcoral;
+    background-color: #FF9551;
     color: aliceblue;
     font-weight: 600;
     margin-left: 10px;
     width: 9%;
     border: 0;
     border-radius: 5%;
+    opacity: 0.7;
+}
+.input-form .input-submit:hover {
+    opacity: 1;
 }
 
 .input-form .input-text {
@@ -37,7 +41,7 @@ body {
 }
 
 .tasks-class {
-    background-color: #eee;
+    background-color: #B9FFF8;
     width: 80vw;
     height: 7vh;
     padding: 10px;
@@ -60,7 +64,7 @@ body {
 
 }
 .tasks-class .task div{
-    background-color: white;
+    background-color: #6FEDD6;
     width: 80%;
     height: 100%;
     font-size: x-large;
@@ -68,7 +72,7 @@ body {
     text-indent: 10px;
 }
 .tasks-class .task button {
-    background-color: red;
+    background-color: #FF4A4A;
     color: azure;
     width: 18%;
     height: 100%;
